[fix] donation scroll, header nav buttons visible

--- a/app/globals.css
+++ b/app/globals.css
@@ -42,9 +42,11 @@ iframe {
     scroll-snap-type: y mandatory;
     scroll-behavior: smooth;
   }
-  .sixth-section {
+  /* #sixth-section {
     scroll-snap-type: y proximity !important;
-  }
+    scroll-snap-align: start center !important;
+    scroll-snap-stop: none !important;
+  } */
 }
 
 /* 
